added watches and alerts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-# TODO change to 'update'
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 # Kafka settings
 kafka.bootstrapAddress = localhost:9092
@@ -24,3 +23,6 @@ master.uri = local[2]
 # Local use only
 # TODO remove when deployed
 server.port = 8090
+
+# URL of Spark service
+spark.consumer.url = http://localhost:8070
